--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </activity>
         <activity
             android:name=".Quiz"
-            android:label="Quiz"
+            android:label=""
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
@@ -47,7 +47,11 @@
             android:name=".Choose_Template"
             android:label="Choose Template"
             android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+        </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
